[gd_scene load_steps=3 format=3 uid="uid://cpatheditor"]

[ext_resource type="Script" path="res://scripts/tools/path_editor.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/sprites/Verdian Forest Background.jpg" id="2_bg"]

[node name="PathEditor" type="Node2D"]
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
offset_left = 200.0
offset_right = 1080.0
offset_bottom = 720.0
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 5

[node name="LeftGuide" type="ColorRect" parent="."]
offset_right = 200.0
offset_bottom = 720.0
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="RightGuide" type="ColorRect" parent="."]
offset_left = 1080.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="Line2D" type="Line2D" parent="."]
width = 40.0
default_color = Color(0.6, 0.5, 0.3, 0.7)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopBar" type="HBoxContainer" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 190.0
offset_bottom = 50.0
theme_override_constants/separation = 10

[node name="BackBtn" type="Button" parent="UI/TopBar"]
layout_mode = 2
text = "Back"

[node name="ClearBtn" type="Button" parent="UI/TopBar"]
layout_mode = 2
text = "Clear"

[node name="CopyBtn" type="Button" parent="UI/TopBar"]
layout_mode = 2
text = "Copy"

[node name="OutputPanel" type="Panel" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -200.0
grow_horizontal = 0
grow_vertical = 0

[node name="Output" type="Label" parent="UI/OutputPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Click to add waypoints
Right-click to undo"
autowrap_mode = 2

[node name="Instructions" type="Label" parent="UI"]
offset_left = 210.0
offset_top = 10.0
offset_right = 600.0
offset_bottom = 60.0
text = "PATH EDITOR
Left-click: Add waypoint | Right-click: Undo"
theme_override_colors/font_color = Color(1, 1, 1, 0.9)

[node name="MapLabel" type="Label" parent="UI"]
offset_left = 210.0
offset_top = 680.0
offset_right = 500.0
offset_bottom = 710.0
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "Map Name"

[connection signal="pressed" from="UI/TopBar/BackBtn" to="." method="_on_back_pressed"]
[connection signal="pressed" from="UI/TopBar/ClearBtn" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="UI/TopBar/CopyBtn" to="." method="_on_copy_pressed"]
